--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
-    "nuxi": "^0.10.1",
+    "nuxi-edge": "^3.0.0-27307420.6a25d3e",
     "nuxt3": "latest"
   },
   "name": "nuxt3-app",
